pkg/ibmvpc/examples/out/explain_out/QueryConnectionSGBasic4_all_vpcs_explain_detail.txt
Explaining connectivity from vsi1-ky to 161.26.0.0/12 within test-vpc1-ky using "protocol: UDP src-ports: 10-100 dst-ports: 443"
Interpreted source: vsi1-ky[10.240.10.4]
Interpreted destination: 161.26.0.0/12 (external)
================================================================================================================================

Connections are allowed from vsi1-ky[10.240.10.4] to Public Internet 161.26.0.0/16 using "protocol: UDP src-ports: 10-100 dst-ports: 443"

Path:
	vsi1-ky[10.240.10.4] -> security group sg1-ky -> subnet1-ky -> network ACL acl1-ky -> 
	PublicGateway public-gw-ky -> 
	Public Internet 161.26.0.0/16


Details:
~~~~~~~~
Path is enabled; The relevant rules are:
	Egress:
		security group sg1-ky allows connection with the following allow rules
			index: 2, direction: outbound,  conns: protocol: udp,  dstPorts: 1-65535, remote: 161.26.0.0/16, local: 0.0.0.0/0
		network ACL acl1-ky allows connection with the following allow rules
			index: 0, direction: outbound , src: 0.0.0.0/0 , dst: 0.0.0.0/0, conn: all, action: allow

------------------------------------------------------------------------------------------------------------------------

No connections from vsi1-ky[10.240.10.4] to Public Internet 161.16.0.0-161.25.255.255,161.27.0.0-161.31.255.255 using "protocol: UDP src-ports: 10-100 dst-ports: 443";
connection is blocked by egress

External traffic via PublicGateway: public-gw-ky
Egress: security group sg1-ky blocks connection; network ACL acl1-ky allows connection

Path:
	vsi1-ky[10.240.10.4] -> | security group sg1-ky |


Details:
~~~~~~~~
Path is disabled; The relevant rules are:
	Egress:
		security group sg1-ky has no relevant allow rules
		network ACL acl1-ky allows connection with the following allow rules
			index: 0, direction: outbound , src: 0.0.0.0/0 , dst: 0.0.0.0/0, conn: all, action: allow

------------------------------------------------------------------------------------------------------------------------
